<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    android:id="@+id/cvShoppingCarts"
    android:layout_marginBottom="@dimen/margin_bottom_cv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_information"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

        <TextView
            android:id="@+id/tvProductNameCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_product"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_cv_information">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_information"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

        <TextView
            android:id="@+id/tvProductPriceCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_product_price"
            android:textSize="@dimen/text_shopping_cart_size_list"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_cv_information">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_information"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

        <TextView
            android:id="@+id/tvProductQuantityCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_product_quantity"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_cv_information">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_information"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

        <TextView
            android:id="@+id/tvProductTotalPriceCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_product_price"
            android:textSize="@dimen/text_shopping_cart_size_list"/>

    </LinearLayout>

</LinearLayout>