<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.miguel.pruebaintergrupo.ProductDetailActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_information"
            android:textSize="@dimen/text_product_size_list"/>

        <TextView
            android:id="@+id/tvProductDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_product"
            android:textSize="@dimen/text_product_size_list"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_information"
            android:textSize="@dimen/text_product_size_list"/>

        <TextView
            android:id="@+id/tvProductPriceDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_product_price"
            android:textSize="@dimen/text_product_size_list"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_top_login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_information"
            android:textSize="@dimen/text_product_size_list"/>

        <EditText
            android:id="@+id/etQuantityDetail"
            android:layout_width="@dimen/etQuantity"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"/>

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:theme="@style/MiBotonRaised"
        android:elevation="@dimen/elevation_button"
        android:layout_marginTop="@dimen/margin_top_login"
        android:onClick="addProduct"/>

</LinearLayout>
