<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cvProducts"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    android:layout_marginBottom="@dimen/margin_bottom_cv">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/example_product"
            android:textSize="@dimen/text_product_size_list"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="@dimen/price_size_list"/>

            <TextView
                android:id="@+id/tvProductPriceList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_product_price"
                android:textSize="@dimen/price_size_list"/>

        </LinearLayout>


    </LinearLayout>



</android.support.v7.widget.CardView>